--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.15.3",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
