--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
@@ -18,8 +19,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.10.0",
     "recharts": "^2.15.3",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.13",
     "yup": "^1.6.1"
   },
